<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/buy_label"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/buy"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label">

        </ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="5dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/include">

                </ImageView>

                <TextView
                    android:text="@string/buy_first"
                    android:layout_weight="10"
                    android:layout_width="0dp"
                    android:textColor="@color/colorText"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/roboto_regular"
                    android:layout_height="wrap_content">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="5dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/include">

                </ImageView>

                <TextView
                    android:text="@string/buy_second"
                    android:layout_weight="10"
                    android:layout_width="0dp"
                    android:textColor="@color/colorText"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/roboto_regular"
                    android:layout_height="wrap_content">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="5dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/include">

                </ImageView>

                <TextView
                    android:text="@string/buy_third"
                    android:layout_weight="10"
                    android:layout_width="0dp"
                    android:textColor="@color/colorText"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/roboto_regular"
                    android:layout_height="wrap_content">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="5dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/include">

                </ImageView>

                <TextView
                    android:text="@string/buy_otmena"
                    android:layout_weight="10"
                    android:layout_width="0dp"
                    android:textColor="@color/colorText"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/roboto_regular"
                    android:layout_height="wrap_content">

                </TextView>

            </LinearLayout>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="wrap_content"

                android:textSize="13sp"
                android:textColor="@color/colorSelected"
                android:fontFamily="@font/roboto_regular"

                android:text="@string/buy_fourth">

            </TextView>


            <Button
                android:id="@+id/buy_button"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:background="@color/colorSelected"
                android:textColor="#fff"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/buy_button"
                android:layout_height="match_parent">

            </Button>

            <TextView
                android:layout_marginTop="4dp"
                android:textSize="10sp"
                android:textColor="@color/colorText"
                android:textAlignment="center"
                android:text="@string/buy_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="30dp">

            </TextView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
